# torrent-search-mcp

./: CHANGELOG.md  CLAUDE.md  compose.yaml  pyproject.toml
torrent_search/: __main__.py  fastapi_server.py  mcp_server.py  test_mcp_server.py
torrent_search/wrapper/: __init__.py  api_client.py  models.py  scraper.py  tpb.py
