[project]
name = "torrent-search-mcp"
version = "2.3.3"
description = "Torrent Search MCP Server"
authors = [{ name = "philogicae" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "fr-torrent-search-mcp~=1.3",
    "crawl4ai",
    "aiocache",
    "fastmcp",
    "fastapi",
    "httpx",
    "pybase62",
]

[project.urls]
Repository = "https://github.com/philogicae/torrent-search-mcp"
Release = "https://github.com/philogicae/torrent-search-mcp/releases"
DeepWiki = "https://deepwiki.com/philogicae/torrent-search-mcp"

[project.scripts]
torrent-search-mcp = "torrent_search.__main__:cli"

[dependency-groups]
dev = ["ruff", "pytest", "pytest-asyncio", "ty"]

[tool.hatch.build]
include = ["torrent_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = ["ignore"]
